Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: 10.3
-
Fix Version/s: 10.3.11
-
Component/s: Sequences
-
Labels:None
Description
SEQUENCE can't created with innodb_force_primary_key =1
set global innodb_force_primary_key =1; |
 |
CREATE SEQUENCE s2 START WITH 100 INCREMENT BY 10; |
Create with a key or alter is not possible, because
"SQL Error (4086) Seqeuence s2 table structure is invalid
(Sequence tables cannot have any keys"
Only workaround is
set global innodb_force_primary_key =0;
and create the sequence.